service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-app
  namespace: aluno-jose
spec:
  ports:
  - name: http
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: app
  sessionAffinity: None
  type: ClusterIP
