ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-app
  namespace: aluno-jose
spec:
  rules:
  - host: app-jose.aula.jac.bsb.br
    http:
      paths:
      - backend:
          service:
            name: svc-app
            port:
              number: 5000
        pathType: ImplementationSpecific
